docs/envoy/v1.30.11/_sources/api-v3/extensions/filters/http/oauth2/v3/oauth.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/oauth2/v3/oauth.proto:

OAuth (proto)
=============

.. _extension_envoy.filters.http.oauth2:

This extension has the qualified name ``envoy.filters.http.oauth2``


.. note::
  This extension is functional but has not had substantial production burn time,
  use only with this caveat.

  This extension is intended to be robust against untrusted downstream traffic. It
  assumes that the upstream is trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.http <extension_category_envoy.filters.http>`



  This extension must be configured with one of the following type URLs:



  - :ref:`type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2 <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2>`



OAuth :ref:`configuration overview <config_http_filters_oauth>`.





.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Credentials:

extensions.filters.http.oauth2.v3.OAuth2Credentials
---------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2Credentials proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L26>`




.. code-block:: json
  :force:

  {
    "client_id": ...,
    "token_secret": {...},
    "hmac_secret": {...},
    "cookie_names": {...}
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.client_id:


client_id
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The client_id to be used in the authorize calls. This value will be URL encoded when sent to the OAuth server.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.token_secret:


token_secret
  (:ref:`extensions.transport_sockets.tls.v3.SdsSecretConfig <envoy_v3_api_msg_extensions.transport_sockets.tls.v3.SdsSecretConfig>`, *REQUIRED*) The secret used to retrieve the access token. This value will be URL encoded when sent to the OAuth server.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.hmac_secret:


hmac_secret
  (:ref:`extensions.transport_sockets.tls.v3.SdsSecretConfig <envoy_v3_api_msg_extensions.transport_sockets.tls.v3.SdsSecretConfig>`, *REQUIRED*) If present, the secret token will be a HMAC using the provided secret.


  Configures how the secret token should be created.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.cookie_names:


cookie_names
  (:ref:`extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames>`) The cookie names used in OAuth filters flow.


.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames:

extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames
---------------------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L28>`




.. code-block:: json
  :force:

  {
    "bearer_token": ...,
    "oauth_hmac": ...,
    "oauth_expires": ...,
    "id_token": ...,
    "refresh_token": ...
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.bearer_token:


bearer_token
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold OAuth bearer token value. When the authentication server validates the
  client and returns an authorization token back to the OAuth filter, no matter what format
  that token is, if :ref:`forward_bearer_token <envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.forward_bearer_token>`
  is set to true the filter will send over the bearer token as a cookie with this name to the
  upstream. Defaults to ``BearerToken``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.oauth_hmac:


oauth_hmac
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold OAuth HMAC value. Defaults to ``OauthHMAC``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.oauth_expires:


oauth_expires
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold OAuth expiry value. Defaults to ``OauthExpires``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.id_token:


id_token
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold the id token. Defaults to ``IdToken``.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Credentials.CookieNames.refresh_token:


refresh_token
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Cookie name to hold the refresh token. Defaults to ``RefreshToken``.




.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Config:

extensions.filters.http.oauth2.v3.OAuth2Config
----------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2Config proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L77>`

OAuth config




.. code-block:: json
  :force:

  {
    "token_endpoint": {...},
    "authorization_endpoint": ...,
    "credentials": {...},
    "redirect_uri": ...,
    "redirect_path_matcher": {...},
    "signout_path": {...},
    "forward_bearer_token": ...,
    "pass_through_matcher": [],
    "auth_scopes": [],
    "resources": [],
    "auth_type": ...,
    "use_refresh_token": {...},
    "default_expires_in": {...},
    "deny_redirect_matcher": [],
    "default_refresh_token_expires_in": {...}
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.token_endpoint:


token_endpoint
  (:ref:`config.core.v3.HttpUri <envoy_v3_api_msg_config.core.v3.HttpUri>`) Endpoint on the authorization server to retrieve the access token from.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.authorization_endpoint:


authorization_endpoint
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The endpoint redirect to for authorization in response to unauthorized requests.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.credentials:


credentials
  (:ref:`extensions.filters.http.oauth2.v3.OAuth2Credentials <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Credentials>`, *REQUIRED*) Credentials used for OAuth.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.redirect_uri:


redirect_uri
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The redirect URI passed to the authorization endpoint. Supports header formatting
  tokens. For more information, including details on header value syntax, see the
  documentation on :ref:`custom request headers <config_http_conn_man_headers_custom_request_headers>`.

  This URI should not contain any query parameters.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.redirect_path_matcher:


redirect_path_matcher
  (:ref:`type.matcher.v3.PathMatcher <envoy_v3_api_msg_type.matcher.v3.PathMatcher>`, *REQUIRED*) Matching criteria used to determine whether a path appears to be the result of a redirect from the authorization server.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.signout_path:


signout_path
  (:ref:`type.matcher.v3.PathMatcher <envoy_v3_api_msg_type.matcher.v3.PathMatcher>`, *REQUIRED*) The path to sign a user out, clearing their credential cookies.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.forward_bearer_token:


forward_bearer_token
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Forward the OAuth token as a Bearer to upstream web service.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.pass_through_matcher:


pass_through_matcher
  (**repeated** :ref:`config.route.v3.HeaderMatcher <envoy_v3_api_msg_config.route.v3.HeaderMatcher>`) Any request that matches any of the provided matchers will be passed through without OAuth validation.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.auth_scopes:


auth_scopes
  (**repeated** `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional list of OAuth scopes to be claimed in the authorization request. If not specified,
  defaults to "user" scope.
  OAuth RFC https://tools.ietf.org/html/rfc6749#section-3.3


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.resources:


resources
  (**repeated** `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional resource parameter for authorization request
  RFC: https://tools.ietf.org/html/rfc8707


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.auth_type:


auth_type
  (:ref:`extensions.filters.http.oauth2.v3.OAuth2Config.AuthType <envoy_v3_api_enum_extensions.filters.http.oauth2.v3.OAuth2Config.AuthType>`) Defines how ``client_id`` and ``client_secret`` are sent in OAuth client to OAuth server requests.
  RFC https://datatracker.ietf.org/doc/html/rfc6749#section-2.3.1


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.use_refresh_token:


use_refresh_token
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) If set to true, allows automatic access token refresh using the associated refresh token (see
  `RFC 6749 section 6 <https://datatracker.ietf.org/doc/html/rfc6749#section-6>`_), provided that the OAuth server supports that.
  Default value is false.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.default_expires_in:


default_expires_in
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The default lifetime in seconds of the access token, if omitted by the authorization server.

  If this value is not set, it will default to ``0s``. In this case, the expiry must be set by
  the authorization server or the OAuth flow will fail.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.deny_redirect_matcher:


deny_redirect_matcher
  (**repeated** :ref:`config.route.v3.HeaderMatcher <envoy_v3_api_msg_config.route.v3.HeaderMatcher>`) Any request that matches any of the provided matchers won't be redirected to OAuth server when tokens are not valid.
  Automatic access token refresh will be performed for these requests, if enabled.
  This behavior can be useful for AJAX requests.


.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2Config.default_refresh_token_expires_in:


default_refresh_token_expires_in
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The default lifetime in seconds of the refresh token, if the exp (expiration time) claim is omitted in the refresh token or the refresh token is not JWT.

  If this value is not set, it will default to ``604800s``. In this case, the cookie with the refresh token will be expired
  in a week.
  This setting is only considered if ``use_refresh_token`` is set to true, otherwise the authorization server expiration or ``defaul_expires_in`` is used.


.. _envoy_v3_api_enum_extensions.filters.http.oauth2.v3.OAuth2Config.AuthType:

Enum extensions.filters.http.oauth2.v3.OAuth2Config.AuthType
------------------------------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2Config.AuthType proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L78>`




.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.OAuth2Config.AuthType.URL_ENCODED_BODY:


URL_ENCODED_BODY
  *(DEFAULT)* ⁣The ``client_id`` and ``client_secret`` will be sent in the URL encoded request body.
  This type should only be used when Auth server does not support Basic authentication.


.. _envoy_v3_api_enum_value_extensions.filters.http.oauth2.v3.OAuth2Config.AuthType.BASIC_AUTH:


BASIC_AUTH
  ⁣The ``client_id`` and ``client_secret`` will be sent using HTTP Basic authentication scheme.




.. _envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2:

extensions.filters.http.oauth2.v3.OAuth2
----------------------------------------


:repo:`[extensions.filters.http.oauth2.v3.OAuth2 proto] <api/envoy/extensions/filters/http/oauth2/v3/oauth.proto#L154>`

Filter config.



.. code-block:: json
  :force:

  {
    "config": {...}
  }

.. _envoy_v3_api_field_extensions.filters.http.oauth2.v3.OAuth2.config:


config
  (:ref:`extensions.filters.http.oauth2.v3.OAuth2Config <envoy_v3_api_msg_extensions.filters.http.oauth2.v3.OAuth2Config>`) Leave this empty to disable OAuth2 for a specific route, using per filter config.


